fixed some spacing and mobile text size

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,9 @@ $family-sans-serif: 'Istok Web', sans-serif;
 $family-serif: 'Lora', serif;
 $family-primary: $family-serif;
 
+$link: #4c75a3;
+$info: #0088cc;
+
 .title{
 	font-family: $family-sans-serif
 }
